Ready for the dry run.

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -1682,7 +1682,9 @@ The folder "%s" appears to be a song folder.  All song folders must reside in a 
 
 [SongUtil]
 You must supply a name for your new edit.=You must supply a name for your new edit.
+The name you chose conflicts with another chart. Please use a different name.=The name you chose conflicts with another chart. Please use a different name.
 The name you chose conflicts with another edit. Please use a different name.=The name you chose conflicts with another edit. Please use a different name.
+The chart name cannot contain any of the following characters: %s=The chart name cannot contain any of the following characters: %s
 The edit name cannot contain any of the following characters: %s=The edit name can not contain any of the following characters: %s
 The step author's name cannot contain any of the following characters: %s=The step author's name cannot contain any of the following characters: %s
 
