Let's try that one again.

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -1293,6 +1293,7 @@ Snap to=Snap to
 Selection beat=Selection beat
 Difficulty=Difficulty
 Description=Description
+Chart Name=Chart Name
 Chart Style=Chart Style
 Step Author=Step Author
 Main title=Main title
