Add Steps Data read only menu for the editor.

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -1051,6 +1051,7 @@ Type=Type
 Turn=Turn
 Undo=Undo
 UseUnlockSystem=Unlock System
+View steps data=View Steps Data
 VisualDelaySeconds=Visual Delay
 Voltage=Voltage
 Vsync=Wait For Vsync
