Add rolls, lifts, fakes to View Data window.

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -878,6 +878,7 @@ Entry %d=Entry %d
 EventMode=Event Mode
 Exit=Exit
 Fail=Fail
+Fakes=Fakes
 FastLoad=Fast\nLoad
 File1 Global BGAnimation=File1 Global BGAnimation
 File1 Global Movie=File1 Global Movie
@@ -921,6 +922,7 @@ Key Joy Mappings=Config Key/Joy Mappings
 Language=Language
 Last second hint=Last second hint
 Layer=Layer
+Lifts=Lifts
 LifeDifficulty=Life Difficulty
 LifeType=Life Type
 Low Meter=Low Meter
@@ -987,6 +989,7 @@ Rename=Rename
 Reset To Defaults=Reset Options To Default Values
 Revert from disk=Revert from disk
 Revert to last save=Revert from cache
+Rolls=Rolls
 Save=Save
 SaveScores=Save Scores
 SaveReplays=Save Replays
