Add Miss Combo support in #COMBOS tag.

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -1248,7 +1248,7 @@ Enter a new Stop value.=Enter a new Stop value.\n\nType "0" to remove.
 Enter a new Delay value.=Enter a new Delay value.\n\nType "0" to remove.
 Enter a new Time Signature.=Enter a new time signature.\nUse the format "x/y".\nEnter the previous value to remove.
 Enter a new Tickcount value.=Enter a new Tickcount value.\n\nEnter the previous value to remove.
-Enter a new Combo value.=Enter a new Combo value.\n\nEnter the previous value to remove.
+Enter a new Combo value.=Enter a new Combo value.\nUse the format "x/y".\nEnter the previous value to remove.
 Enter a new Label value.=Enter a name for this section of the chart.\n\nEnter a previously used label to remove.
 Enter a new Warp value.=Enter the number of beats you will warp over.\n\nType "0" to remove this segment.
 Enter a new Speed percent value.=Enter the ratio for speed scrolling.\nEnter the previous value to remove.\n1 is the default scroll.
