[loading window] Hey look, the load can be aborted now! Also, loading messages are now in the language file.

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -1734,7 +1734,6 @@ DoubleChallengeMeter=Double Challenge Meter
 
 [StepMania]
 Announcer=Announcer
-Couldn't open any loading windows.=Couldn't open any loading windows.
 Fullscreen=Fullscreen
 Initializing %s...=Initializing %s...
 No video renderers attempted.=No video renderers attempted.
@@ -1750,6 +1749,22 @@ Vsync=Vsync
 Windowed=Windowed
 color=color
 texture=texture
+
+[LoadingWindow]
+Couldn't open any loading windows.=Couldn't open any loading windows.
+Starting sound subsystem...=Starting sound subsystem...
+Initializing bookkeeper...=Initializing bookkeeper...
+Starting lights subsystem...=Starting lights subsystem...
+Loading game type...=Loading game type...
+Building song cache index...=Building song cache index...
+Loading banner cache...=Loading banner cache...
+Initializing memory card system...=Initializing memory card system...
+Initializing character system...=Initializing character system...
+Initializing profile system...=Initializing profile system...
+Updating popular song list...=Updating popular song list...
+Updating course rankings...=Updating course rankings...
+Initializing statics manager...=Initializing statics manager...
+Initializing message system...=Initializing message system...
 
 [StepsType]
 dance-couple=couple
