this should be movies, not textures

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -372,7 +372,7 @@ MaxTextureResolution=Choose the maximum texture resolution.  Setting this to any
 MenuTimer=When &oq;ON&cq;, menus have a time limit.
 Mines=Mines
 MoveRandomToEnd=Determines if courses with random songs should be placed at the end of the course select wheel.
-MovieColorDepth=Choose the color depth of textures. 32 bit textures use more memory, but look nicer.
+MovieColorDepth=Choose the color depth of movies. 32 bit textures use more memory, but look nicer.
 MusicWheelSwitchSpeed=Adjusts the speed of the music wheel.
 MusicWheelUsesSections=&oq;Always&cq; means sections in group + ABC; &oq;Never&cq; means no sections; &oq;Title Only&cq; shows sections in ABC order.
 Network Options=Connect to a server or change server options.
