--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -345,6 +345,8 @@ Edit Songs/Steps=Edit Songs/Steps
 Practice Songs/Steps=Practice Songs/Steps
 EditorShowBGChangesPlay=Choose whether to display song backgrounds while playing.
 Effect=Effect
+EffectsReceptor=Add alternative behaviors to the receptors and notes.
+EffectsArrow=Add alternative behaviors to the receptors and notes.
 EnableAttackSounds=If enabled, a sound effect will play when an attack begins or ends.
 EnableMineHitSound=If enabled, a sound will play when a mine is stepped on.
 EventMode=When set to &oq;ON&cq;, and you can continue playing forever.  Failing will also take you back to the the Select Music or Select Course screen.
@@ -383,7 +385,7 @@ OnlyDedicatedMenuButtons=Choose between allowing game buttons (dance pad, etc.) 
 OptionsRandomJukebox=
 OsMountPlayer1=
 OsMountPlayer2=
-Persp=Perspective
+Persp=Tilt
 Player1Profile=
 Player2Profile=
 PlayerAutoPlay=PlayerAutoPlay
@@ -873,6 +875,8 @@ Editor options=Options
 EditorShowBGChangesPlay=Show Backgrounds
 Erase step timing=Erase step timing
 Effect=Effect
+EffectsReceptor=Effects
+EffectsArrow=
 EnableAttackSounds=Attack Sounds
 EnableMineHitSound=Mine Sounds
 Entry %d=Entry %d
@@ -1735,6 +1739,7 @@ DoubleChallengeMeter=Double Challenge Meter
 
 [StepMania]
 Announcer=Announcer
+Couldn't open any loading windows.=Couldn't open any loading windows.
 Fullscreen=Fullscreen
 Initializing %s...=Initializing %s...
 No video renderers attempted.=No video renderers attempted.
@@ -1750,22 +1755,6 @@ Vsync=Vsync
 Windowed=Windowed
 color=color
 texture=texture
-
-[LoadingWindow]
-Couldn't open any loading windows.=Couldn't open any loading windows.
-Starting sound subsystem...=Starting sound subsystem...
-Initializing bookkeeper...=Initializing bookkeeper...
-Starting lights subsystem...=Starting lights subsystem...
-Loading game type...=Loading game type...
-Building song cache index...=Building song cache index...
-Loading banner cache...=Loading banner cache...
-Initializing memory card system...=Initializing memory card system...
-Initializing character system...=Initializing character system...
-Initializing profile system...=Initializing profile system...
-Updating popular song list...=Updating popular song list...
-Updating course rankings...=Updating course rankings...
-Initializing statics manager...=Initializing statics manager...
-Initializing message system...=Initializing message system...
 
 [StepsType]
 dance-couple=couple
