--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -2,6 +2,22 @@
 WindowTitle=StepMania
 StepMania=StepMania
 
+[LoadingWindow]
+Couldn't open any loading windows.=Couldn't open any loading windows.
+Starting sound subsystem...=Starting sound subsystem...
+Initializing bookkeeper...=Initializing bookkeeper...
+Starting lights subsystem...=Starting lights subsystem...
+Loading game type...=Loading game type...
+Building song cache index...=Building song cache index...
+Loading banner cache...=Loading banner cache...
+Initializing memory card system...=Initializing memory card system...
+Initializing character system...=Initializing character system...
+Initializing profile system...=Initializing profile system...
+Updating popular song list...=Updating popular song list...
+Updating course rankings...=Updating course rankings...
+Initializing statics manager...=Initializing statics manager...
+Initializing message system...=Initializing message system...
+
 [Arch]
 Couldn't create a movie driver.=Couldn't create a movie driver.
 Input Handlers cannot be empty.=Input Handlers can not be empty.
