Allow copying a selection of timing segments.
Pasting not yet possible.

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -842,6 +842,7 @@ Convert selection to warp=Convert selection to Warp Segment
 Convert selection to fake=Convert selection to Fake Segment
 Copy=Copy
 Copy timing data=Copy timing data
+Copy Partial Timing=Copy Selected Timing Data
 CourseSortOrder=Course Sort
 Create New=Create New
 Create New Course=Create New
