Add the copy/paste selected timing data feature.
Not perfect at this stage, but...well, everyone wanted it.

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -975,6 +975,7 @@ OsMountPlayer2=OS&nbsp;Mount Player2
 Paste at begin marker=Paste at begin marker
 Paste at current beat=Paste at current beat
 Paste timing data=Paste timing data
+Paste Partial Timing at current beat=Paste Partial Timing at current beat
 Persp=Persp
 Play current beat to end=Play current beat to end
 Play preview music=Play preview music
