fix up a player options description

--- a/Themes/default/Languages/en.ini
+++ b/Themes/default/Languages/en.ini
@@ -118,7 +118,7 @@ ProTiming=Change the way your judgments are shown.
 Scroll=Adjust the direction arrows flow to meet the targets.
 NoteSkins=Choose a different appearance for the arrows.
 Handicap=Removes notes. Using these will invalidate a high score.
-Hide=Adjust the visibility of the targets.
+Hide=Dark hides the receptors. Blind hides judgments. Cover hides the background.
 Persp=Change the viewing angle of the arrow stream.
 Steps=Adjust the difficulty of the steps.
 Characters=Dancing buddies.
