[MusicWheel, RoomWheel] Moved the "- EMPTY -" string to the languages file. [AJ]

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -258,33 +258,37 @@ P31=P31
 P32=P32
 
 [MusicWheel]
+Portal=Portal
+Random=Random
+Roulette=Roulette
+Empty=- EMPTY -
+
 ArtistText=Artist
 BpmText=BPM
-EasyMeterText=Easy Rank
-GenreText=Genre
-GroupText=Group
-HardMeterText=Hard Rank
 ChallengeMeterText=Challenge Rank
 DoubleEasyMeterText=Easy Rank (Double)
 DoubleMediumMeterText=Medium Rank (Double)
 DoubleHardMeterText=Hard Rank (Double)
 DoubleChallengeMeterText=Challenge Rank (Double)
+EasyMeterText=Easy Rank
+GenreText=Genre
+GroupText=Group
+HardMeterText=Hard Rank
 LengthText=Length
 MediumMeterText=Medium Rank
 PopularityText=Player's Best!
-Portal=Portal
 PreferredText=Preferred
-Random=Random
-Roulette=Roulette
 TitleText=Title
 RecentText=Recent
 TopGradesText=Top Grades
+
 CoursesText=Courses
 AllCoursesText=All Courses
 NonstopText=Nonstop Courses
 OniText=Oni Courses
 EndlessText=Endless Courses
 SurvivalText=Survival Courses
+
 NormalModeText=Normal Mode
 BattleModeText=Battle Mode (Disabled)
 
@@ -1176,6 +1180,7 @@ NumTh=th
 
 [RoomWheel]
 Enter room name=Enter room name
+Empty=- EMPTY -
 
 [RoomInfoDisplay]
 Last Round Info:=Last Round Info: 
