allow localization of some strings in ScreenSelectProfile

--- a/Themes/default/Languages/en.ini
+++ b/Themes/default/Languages/en.ini
@@ -33,6 +33,7 @@ Explanation=Quick Setup provides a easy way to set commonly-changed and useful p
 HelpText=... Loading profiles, please wait ...
 
 [ScreenSelectProfile]
+PressStart=Press &START; to join.
 HelpText=&MENUUP;&MENUDOWN; Switch Profile &START; Choose/Join &BACK; Unselect
 
 [ScreenSelectMaster]
