forgot these two

--- a/Themes/default/Languages/en.ini
+++ b/Themes/default/Languages/en.ini
@@ -33,6 +33,8 @@ Explanation=Quick Setup provides a easy way to set commonly-changed and useful p
 HelpText=... Loading profiles, please wait ...
 
 [ScreenSelectProfile]
+%d Song Played=%d Song Played
+%d Songs Played=%d Songs Played
 PressStart=Press &START; to join.
 HelpText=&MENUUP;&MENUDOWN; Switch Profile &START; Choose/Join &BACK; Unselect
 
