allow default theme's PaneDisplay strings to be themed

--- a/Themes/default/Languages/en.ini
+++ b/Themes/default/Languages/en.ini
@@ -182,3 +182,18 @@ Custom=Special
 
 [ScreenTestInput]
 HelpText=Hold &BACK; or &START; to exit.
+
+[PaneDisplay]
+Taps=Taps
+Jumps=Jumps
+Holds=Holds
+Mines=Mines
+Hands=Hands
+Rolls=Rolls
+Lifts=Lifts
+Fakes=Fakes
+S=S
+V=V
+A=A
+F=F
+C=C
