allow theming of 'press start for options' and so on

--- a/Themes/default/Languages/en.ini
+++ b/Themes/default/Languages/en.ini
@@ -59,6 +59,8 @@ HelpText=&BACK; Exit &START; Select &MENULEFT;&MENURIGHT; Move
 HelpText=&BACK; Exit &START; Skip
 
 [ScreenSelectMusic]
+Press Start For Options=Press &START; for Options
+Entering Options=Entering Options
 HelpText=&BACK; Exit &START; Select / Join &SELECT; Magic Codes &MENULEFT;&MENURIGHT; Move::&AUXWHITE;+[KEY] Sort To [KEY]
 AlternateHelpText=&SELECT;+&MENULEFT;&MENURIGHT; Change Difficulties &SELECT;+&START; Quick Sort
 
