profile save/load using localized strings

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -2295,8 +2295,14 @@ HeaderText=Course Display
 You must supply a name for your course.=You must supply a name for your course.
 The course name cannot contain any of the following characters: %s=The course name cannot contain any of the following characters: %s
 The name you chose conflicts with another course. Please use a different name.=The name you chose conflicts with another course. Please use a different name.
+
+[ScreenProfileLoad]
+Loading Profiles=Loading Profiles...
+
 [ScreenProfileSave]
+Saving Profiles=Saving Profiles...
 HeaderText=
+
 [ScreenTestInput]
 HeaderText=Test Input
 [ScreenMiniMenuContext]
