sm-ssc -> sm5, aside from the old sm-ssc fail thing

--- a/Themes/default/Languages/en.ini
+++ b/Themes/default/Languages/en.ini
@@ -103,7 +103,7 @@ UserPrefComboUnderField=Determine if the combo should display under the notes or
 UserPrefGameplayShowScore=Show or Hide the score display in gameplay.
 UserPrefGameplayShowStepsDisplay=Show or Hide the step information display in gameplay.
 UserPrefShowLotsaOptions=Choose how many lines/rows of options to choose from. &oq;Few&cq; keeps the list to a minimum. &oq;Many&cq; adds various show-off mods.
-UserPrefLongFail=Choose between the original sm-ssc fail (Long) or the new sm-ssc fail (Short).
+UserPrefLongFail=Choose between the original sm-ssc fail (Long) or the new, shorter fail (Short).
 UserPrefFlashyCombo=Determine if combo flashes should be shown or not.
 UserPrefGameplayFooter=If on, displays a footer that blocks visibility of incoming arrows for a certain region ( DDR's score frame ).
 
@@ -166,17 +166,17 @@ Karaoke=V
 Lights_Cabinet=!
 
 [ScreenHowToInstallSongs]
-BodyHeader=How to Obtain and Install Songs for sm-ssc
+BodyHeader=How to Obtain and Install Songs for StepMania
 Finding Songs=Where to Find Songs
 Installing Songs=How to Install Songs
 Importing Songs=Importing from existing StepMania installs
 Reload Songs=Reload Songs
 Exit=Back to Title Menu
 
-Explanation-WhereToFind=Launches a web page with information on finding songs for use with sm-ssc.
+Explanation-WhereToFind=Launches a web page with information on finding songs for use with StepMania.
 Explanation-HowToInstall=Launches a web page with song installation instructions.
-Explanation-AdditionalFolders=If you have other installs of StepMania, you can use the AdditionalFolders preferences to load it into sm-ssc.
-Explanation-ReloadSongs=Reload the songs. This is required if you've added/changed/deleted songs while sm-ssc is running.
+Explanation-AdditionalFolders=If you have other installs of StepMania, you can use the AdditionalFolders preferences to load it into StepMania 5.
+Explanation-ReloadSongs=Reload the songs. This is required if you've added/changed/deleted songs while StepMania is running.
 Explanation-Exit=Return to the title menu.
 
 [OptionNames]
