machine/personal record now uses localized text

--- a/Themes/default/Languages/en.ini
+++ b/Themes/default/Languages/en.ini
@@ -80,6 +80,8 @@ HelpText=
 HelpText=&BACK; Exit &START; Move On &MENULEFT;+&MENURIGHT; or &SELECT; Snapshot
 LifeDifficulty=Life Difficulty: %s
 TimingDifficulty=Timing Difficulty: %s
+MachineRecord=Machine Record #%i!
+PersonalRecord=Personal Record #%i!
 
 [OptionTitles]
 UserPrefAutoSetStyle=Auto Set Style
