stage text now uses localized strings

--- a/Themes/default/Languages/en.ini
+++ b/Themes/default/Languages/en.ini
@@ -3,6 +3,7 @@ HelpText=&BACK; Exit &START; Select &SELECT; Options &MENULEFT;&MENURIGHT;&MENUU
 
 [ScreenWithMenuElements]
 HelpText=&BACK; Exit &START; Select &MENULEFT;&MENURIGHT; Move
+StageCounter=%s Stage
 
 [ScreenTitleMenu]
 HelpText=&BACK; Exit &START; Select &MENUUP;&MENUDOWN; Move
