updated polish translation

--- a/Themes/_fallback/Languages/pl.ini
+++ b/Themes/_fallback/Languages/pl.ini
@@ -1,6 +1,22 @@
-﻿[Common]
+[Common]
 WindowTitle=StepMania PL
 StepMania=StepMania PL
+
+[LoadingWindow]
+Couldn't open any loading windows.=Nie udało się otowrzyć żadnego okna ładowania.
+Starting sound subsystem...=Uruchamianie podsystemu dźwięku...
+Initializing bookkeeper...=Inicjalizacja modułu statystyk...
+Starting lights subsystem...=Uruchamianie podsystemu świateł...
+Loading game type...=Ładowanie modelu gry...
+Building song cache index...=Tworzenie indeksu bufora piosenek...
+Loading banner cache...=Ładowanie bufora bannerów...
+Initializing memory card system...=Inicjalizacja systemu kart USB...
+Initializing character system...=Inicjalizacja systemu tańczących postaci...
+Initializing profile system...=Inicjalizacja systemu profili...
+Updating popular song list...=Uaktualnianie listy popularnych piosenek...
+Updating course rankings...=Uaktualnianie rankigów maratonów...
+Initializing statics manager...=Inicjalizowanie menagera statystyk...
+Initializing message system...=Inicjalizowanie systemu powiadomień...
 
 [Arch]
 Couldn't create a movie driver.=Nie udało się utworzyć sterownika filmów.
@@ -36,7 +52,7 @@ The following packages were exported to your Desktop:=Te pakiety zostały wyeksp
 Saving %s ...=Zapis %s ...
 
 [CustomDifficulty]
-Beginner=Początkujący
+Beginner=Nowicjusz
 Easy=Łatwy
 Medium=Normalny
 Hard=Trudny
@@ -51,7 +67,7 @@ Nightmare=Koszmar
 HalfDouble=Half-Double
 
 [CourseDifficulty]
-Beginner=Początkujący
+Beginner=Nowicjusz
 Challenge=Ekspert
 Hard=Trudny
 Easy=Łatwy
@@ -242,6 +258,7 @@ P31=P31
 P32=P32
 
 [MusicWheel]
+Empty=- BRAK -
 ArtistText=Artysta
 BpmText=BPM
 EasyMeterText=Poziom Łatwy
@@ -345,6 +362,8 @@ Edit Songs/Steps=Edycja Piosenek
 Practice Songs/Steps=Testowanie Piosenek
 EditorShowBGChangesPlay=Wyświetlanie tła piosenki podczas gry.
 Effect=Efekt
+EffectsReceptor=Dodaje alternatywne zachowanie dla receptorów i strzałek.
+EffectsArrow=Dodaje alternatywne zachowanie dla receptorów i strzałek.
 EnableAttackSounds=Włączenie opcji spowoduje że w momencie ataku będzie odgrywany dźwięk.
 EnableMineHitSound=Włączenie opcji spowoduje że w momencie nastąpienia na minę będzie odegrany dźwięk wybuchu.
 EventMode=Włączona opcja spowoduje że będzie można grać w nieskończoność. Zaliczenie, bądź niezaliczenie piosenki, za każdym razem przeniesie na ekran wyboru piosenki.
@@ -434,7 +453,7 @@ SoundEffect=Efekty dźwiękowe
 SoundResampleQuality=Ustawienie jakości resampligu.
 SoundVolume=Regulacja poziomu dźwięku w grze.
 SoundVolumeAttract=Regulacja poziomu dźwięku w trybie demonstracji.
-Speed=Prędkość.
+Speed=Szybkość.
 StepMania Credits=Autorzy uczestniczący w tworzeniu programu.
 Steps=Kroki
 Style=
@@ -608,7 +627,7 @@ Dynamic Random=Losowe Dynamicznie
 Echo=Echo
 End of Song=Koniec Piosenki
 FailAtEnd=Porażka na Końcu
-EffectSpeed=Prędkość
+EffectSpeed=Szybkość
 EffectPitch=Wysokość tonu
 Event=Tryb Imprezy
 Exit=Wyjście
@@ -805,6 +824,7 @@ CelShadeModels=Cel-shadedowane Modele
 Center Image=Centrowanie Obrazu
 Chaos=Chaos
 Characters=Tancerze
+Chart Name=Nazwa Chart`a
 Chart Style=Styl Chart`a
 Choose=Wybierz
 Clear Bookkeeping Data=Czyść dane wyrzutnika monet
@@ -825,6 +845,7 @@ Convert selection to warp=Zmień zaznaczenie na Segment Warp
 Convert selection to fake=Zmień zaznaczenie na Segment Fake
 Copy=Kopiuj
 Copy timing data=Kopiuj timing
+Copy Partial Timing=Skopiuj zaznaczony Timing
 CourseSortOrder=Sortowanie Maratonów
 Create New=Stwórz Nowy
 Create New Course=Stwórz Nowy
@@ -874,12 +895,15 @@ Editor options=Opcje
 EditorShowBGChangesPlay=Pokaż tła
 Erase step timing=Skasuj timing
 Effect=Efekt
+EffectsReceptor=Efekty na Receptorach
+EffectsArrow=
 EnableAttackSounds=Dźwięki Ataków
 EnableMineHitSound=Dźwięki Min
 Entry %d=Wpis %d
 EventMode=Tryb Imprezy
 Exit=Exit
 Fail=Fail
+Fakes=Fejki
 FastLoad=Szybkie\nŁadowanie
 File1 Global BGAnimation=Globalne BGAnimation Plik1
 File1 Global Movie=Globalny Film Plik1
@@ -917,11 +941,13 @@ Insert=Wstaw
 Insert Credit=Wrzuć Kredyt
 Insert beat and shift down=Wstaw Beat i przesuń w dół
 Insert Entry=Wstaw Pole
+Invert notes' player=Odwróć strzałki (tylko tryb normalny)
 Jumps=Skoki
 Key Joy Mappings=Mapowanie Kontrolerów
 Language=Język
 Last second hint=Wskaźnik ostatniej sekundy
 Layer=Warstwa
+Lifts=Lifty
 LifeDifficulty=Zużycie Energii
 LifeType=Rodzaj Energii
 Low Meter=Low Meter
@@ -934,6 +960,8 @@ MenuTimer=Licznik w Menu
 Meter=Licznik
 Min BPM=Min. Określone BPM
 Mines=Miny
+Mirror Player 1 to 2=Odbicie lustrznie strzałek P1 wględem strzałek P2 (tylko tryb normalny)
+Mirror Player 2 to 1=Odbicie lustrznie strzałek P2 wględem strzałek P1 (tylko tryb normalny)
 MoveRandomToEnd=Losowa na&nbsp;koniec
 More Options=Więcej Opcji
 MovieColorDepth=Głębia kolorów filmów
@@ -950,6 +978,7 @@ OsMountPlayer2=OS&nbsp;Mount Player2
 Paste at begin marker=Wklej na początku zaznaczenia
 Paste at current beat=Wklej na bieżącym beat`cie
 Paste timing data=Wklej timing
+Paste Partial Timing at current beat=Wklej częściowy Timing na bierzącym beat`cie.
 Persp=Widok
 Play current beat to end=Odtwórz bieżący beat do końca
 Play preview music=Odtwórz Podgląd Muzyki
@@ -986,6 +1015,7 @@ Rename=Zmień nazwę
 Reset To Defaults=Zresetuj opcje do domyślnych wartości
 Revert from disk=Przywróć z dysku
 Revert to last save=Przywróć z Cache
+Rolls=Rolle
 Save=Zapisz
 SaveScores=Zapisz Wyniki
 SaveReplays=Zapisz Powtórki
@@ -1028,7 +1058,7 @@ Sort=Sortowanie
 SoundResampleQuality=Jakość Resamplingu
 SoundVolume=Poziom Dźwięku
 SoundVolumeAttract=Poziom Dźwięku Demonstracji
-Speed=Prędkość
+Speed=Szybkość
 Step Author=Autor Kroków
 Steps=Kroki
 Stream=Strumień
@@ -1050,6 +1080,7 @@ Type=Typ
 Turn=Obrót
 Undo=Cofnij
 UseUnlockSystem=System Odblokowania
+View steps data=Pokaż dane kroków
 VisualDelaySeconds=Opóźnienie Obrazu
 Voltage=Woltaż
 Vsync=Synchronizacja Pionowa
@@ -1148,6 +1179,7 @@ NumTh=th
 
 [RoomWheel]
 Enter room name=Wprowadź nazwę pokoju
+Empty=- BRAK -
 
 [RoomInfoDisplay]
 Last Round Info:=Ostatnia runda: 
@@ -1231,6 +1263,7 @@ Write Profiles=Zapisz Profile
 off=wyłączone
 on=włączone
 or=lub
+Zoom In Camera=Zbliż Kamerę
 
 [ScreenEdit]
 %s notes=%s
@@ -1257,6 +1290,7 @@ Enter a new artist.=Wpisz Artystę.
 Enter a new genre.=Wpisz Gatunek.
 Enter a new credit.=Wpisz Podziękowania
 Enter a new description.=Wpisz Opis
+Enter a new chart name.=Wpisz nazwę dla układu 
 Enter a new chart style.=Wpisz przeznaczenie układu (np. "Mata", "Klawiatura")
 Enter a new meter.=Wpisz ocenę poziomu trudności układu.
 Enter the author who made this step pattern.=Wpisz autora układu kroków.
@@ -1292,6 +1326,7 @@ Snap to=Przyciągaj do
 Selection beat=Beat Zaznaczenia
 Difficulty=Poziom Trudności
 Description=Opis
+Chart Name=Nazwa Układu 
 Chart Style=Styl Układu
 Step Author=Autor Kroków
 Main title=Tytuł piosenki
@@ -1300,12 +1335,12 @@ Tap Note=Rodzaj Nuty
 Segment=Segment
 Tap Steps=Ilość strzałek
 Jumps=Skoki
-Hands=Handy
+Hands=Ręce
 Holds=Holdy
 Mines=Miny
 Rolls=Rolle
 Lifts=Lifty
-Fakes=Fake`i
+Fakes=Fejki
 Timing Mode=Tryb Timingu
 Step Timing=Timing Kroków
 Song Timing=Timing Piosenki
@@ -1348,6 +1383,7 @@ ExplanationSteps=Wybierz układ kroków.
 [ScreenEvaluation]
 HeaderText=Twoje Wyniki
 HeaderSubText=Twój taniec był wspaniały!
+Stage=Piosenka
 [ScreenEvaluationSummary]
 HeaderText=Ostateczne Wyniki
 [ScreenGameplay]
@@ -1535,11 +1571,12 @@ HelpTextBookkeeping=Naciśnij &MENULEFT;&MENURIGHT; by przeglądać dane. Naciś
 HeaderText=Wybierz Grę
 HeaderSubText=Dla każdego coś miłego.
 
+
 [ScreenSelectGroup]
 ALL MUSIC=CAŁA MUZYKA
 
 [ScreenSelectMusic]
-HeaderText=Wybierz Muzykę
+HeaderText=Wybierz Piosenkę
 HeaderSubText=Nie ma czego się bać. Wybierz to co Ci się podoba.
 
 [ScreenSelectCourse]
@@ -1684,7 +1721,9 @@ The folder "%s" appears to be a song folder.  All song folders must reside in a 
 
 [SongUtil]
 You must supply a name for your new edit.=Musisz podać nazwę dla nowej edycji.
+The name you chose conflicts with another chart. Please use a different name.=Wybrana nazwa konfliktuje z już istniejącą. Proszę podać nową.
 The name you chose conflicts with another edit. Please use a different name.=Wybrana nazwa konfliktuje z już istniejącą edycją. Proszę podać nową.
+The chart name cannot contain any of the following characters: %s=Nazwa układu nie może zawierać znaków: %s
 The edit name cannot contain any of the following characters: %s=Nazwa edycji nie może zawierać znaków: %s
 The step author's name cannot contain any of the following characters: %s=Pole Autor Kroków nie może zawierać znaków: %s
 
@@ -2261,8 +2300,14 @@ HeaderText=Wyświetl Maratony
 You must supply a name for your course.=Musisz nadać nazwę dla maratonu
 The course name cannot contain any of the following characters: %s=Nazwa maratonu nie może zawierać znaków: %s
 The name you chose conflicts with another course. Please use a different name.=Podana nazwa konfliktuje z już istniejącą. Proszę podać inną.
+
+[ScreenProfileLoad]
+Loading Profiles=Ładowanie Profili...
+
 [ScreenProfileSave]
+Saving Profiles=Zapis Profili...
 HeaderText=
+
 [ScreenTestInput]
 HeaderText=Test Kontrolerów
 [ScreenMiniMenuContext]
