stagedisplay stuff and probably hgeol-related stuff

--- a/Themes/default/Languages/en.ini
+++ b/Themes/default/Languages/en.ini
@@ -4,6 +4,7 @@ HelpText=&BACK; Exit &START; Select &SELECT; Options &MENULEFT;&MENURIGHT;&MENUU
 [ScreenWithMenuElements]
 HelpText=&BACK; Exit &START; Select &MENULEFT;&MENURIGHT; Move
 StageCounter=%s Stage
+EventStageCounter=Stage %03i
 
 [ScreenTitleMenu]
 HelpText=&BACK; Exit &START; Select &MENUUP;&MENUDOWN; Move
