--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -1,4 +1,4 @@
-[Common]
+﻿[Common]
 WindowTitle=StepMania
 StepMania=StepMania
 
@@ -2175,7 +2175,7 @@ Oriya=Oriya
 Punjabi=Punjabi
 Polish=Polski
 Pashto=پښتو
-Portuguese=português
+Portuguese=Português
 Quechua=Quechua
 Rhaeto-Romance=Rhaeto-Romance
 Kirundi=Kirundi
