stage display coutnter translated and corrected metrics.ini

--- a/Themes/default/Languages/pl.ini
+++ b/Themes/default/Languages/pl.ini
@@ -3,7 +3,8 @@ HelpText=&BACK; Wyjście &START; Zatwierdź &SELECT; Opcje &MENULEFT;&MENURIGHT;
 
 [ScreenWithMenuElements]
 HelpText=&BACK; Wyjście &START; Zatwierdź &MENULEFT;&MENURIGHT; Wybierz
-StageCounter=Piosenka %s 
+StageCounter=Piosenka %s
+EventStageCounter=Piosenka %03i 
 
 [ScreenTitleMenu]
 HelpText=&BACK; Wyjście &START; Zatwierdź &MENUUP;&MENUDOWN; Wybierz
