some very small adjustments to polish translation.

--- a/Themes/_fallback/Languages/pl.ini
+++ b/Themes/_fallback/Languages/pl.ini
@@ -613,7 +613,7 @@ Cross=Krzyż
 Custom=Użytkownika
 Dance Points=Dance Points
 Dark=Mrok
-Default=Domyślny(e)
+Default=Domyślne
 Default to Off=Domyślnie Wyłączone
 Default to Random=Domyślnie Losowe
 DifficultCourses=Trudność
@@ -1060,7 +1060,7 @@ SoundVolume=Poziom Dźwięku
 SoundVolumeAttract=Poziom Dźwięku Demonstracji
 Speed=Szybkość
 Step Author=Autor Kroków
-Steps=Kroki
+Steps=Poziom
 Stream=Strumień
 Style=Styl
 Sub title=Podtytuł
@@ -1306,7 +1306,7 @@ Enter a new min BPM.=Wpisz minimalną wartość wyświetlaną przez licznik BPM
 Enter a new max BPM.=Wpisz maksymalną wartość wyświetlaną przez licznik BPM
 More than %d notes per measure is not allowed.  This change has been reverted.=Nie można tworzyć więcej niż %d nut na pomiar. Zmiana cofnięta.
 No backgrounds available=Brak dostępnych teł.
-EditHelpText=Góra/Dół:\n     zmiana beat`u\nPrawo/Lewo:\n     zmiana skoku notacji\nKlawisze z cyframi:\n     dodaj/usuń\n     strzałkę/nutę\nklawisze N i M:\n     zamiana rodzaju strzałek\nCtrl + N/M:\n     zmiana rodzaju segmentu\nCtrl + ,/.:\n     Poruszanie po segmentach\nTworzenie Hold`a:\n     Wciśnij cyfrę\n     i trzymając przeciągnij\n     w Górę lub w Dół\nTworzenie Roll`a:\n      Przytrzymaj Shift,\n      a następnie utwórz\n      hold`a.\nSpacja:  Ustawianie\n    rejonu zaznaczenia\nKlawisz T: Przełączanie Timingu\nEnter: Menu opcji zaznaczenia\nKlawisz A: Menu Modyfikacyjne\nEscape: Menu główne\nF4: Menu Timingu\nF1: Pokaż pomoc\n
+EditHelpText=Góra/Dół:\n     zmiana beat`u\nPrawo/Lewo:\n     zmiana skoku notacji\nKlawisze z cyframi:\n     dodaj/usuń\n     strzałkę/nutę\nKlawisze N i M:\n     zamiana rodzaju strzałek\nCtrl + N/M:\n     zmiana rodzaju segmentu\nCtrl + ,/.:\n     Poruszanie po segmentach\nTworzenie Hold`a:\n     Wciśnij cyfrę\n     i trzymając przeciągnij\n     w Górę lub w Dół\nTworzenie Roll`a:\n      Przytrzymaj Shift,\n      a następnie utwórz\n      hold`a.\nSpacja:  Ustawianie\n    rejonu zaznaczenia\nKlawisz T: Przełączanie Timingu\nEnter: Menu opcji zaznaczenia\nKlawisz A: Menu Modyfikacyjne\nEscape: Menu główne\nF4: Menu Timingu\nF1: Pokaż pomoc\n
 PlayRecordHelpText=Naciśnij Start by zakończyć
 Save successful.=Zapis zakończony powodzeniem.
 Saved as SM and DWI.=Zapisano w formacie SM i DWI.
@@ -1591,10 +1591,10 @@ HeaderSubText=Pokaż w czym jesteś dobry.
 
 [ScreenSelectPlayMode]
 NormalExplanation=WYBIERZ SWOJE\nULUBIONE PIOSENKI
-NonstopExplanation=PRZEJDŹ PIOSENKI\nOD POCZĄTKU DO KOŃCA
+NonstopExplanation=PRZEJDZ PIOSENKI\nOD POCZATKU DO KONCA
 ChallengeExplanation=NIE ZGUB\nZBYT WIELU KROKÓW
-SurvivalExplanation=POKONAJ LICZNIK\nBY WYGRAĆ
-EndlessExplanation=TAŃCZ\nAŻ PADNIESZ
+SurvivalExplanation=POKONAJ LICZNIK\nBY WYGRAC
+EndlessExplanation=TANCZ\nAZ PADNIESZ
 HeaderText=Wybierz Tryb
 HeaderSubText=Zaczynajmy. Na pewno dasz radę.
 
