Fix issue 434 by un-hardcoding a string in the theme.

--- a/Themes/default/Languages/en.ini
+++ b/Themes/default/Languages/en.ini
@@ -14,6 +14,7 @@ Connected to %s=Connected to %s
 CurrentGametype=Current Gametype: %s
 LifeDifficulty=Life Difficulty: %s
 TimingDifficulty=Timing Difficulty: %s
+%i Songs (%i Groups), %i Courses=%i Songs (%i Groups), %i Courses
 
 [ScreenTitleJoin]
 HelpText=Press &START; to Play
