update in polish translation regarding AJ`s fix of issue 434

--- a/Themes/default/Languages/pl.ini
+++ b/Themes/default/Languages/pl.ini
@@ -14,6 +14,7 @@ Connected to %s=Podłączony do %s
 CurrentGametype=Tryb gry: %s
 LifeDifficulty=Zużycie energii: %s
 TimingDifficulty=Ocena trafień: %s
+%i Songs (%i Groups), %i Courses=%i Piosenek (w %i Grupach), %i Maratony(ów)
 
 [ScreenTitleJoin]
 HelpText=Naciśnij &START; by rozpocząć grę
