--- a/Themes/default/Languages/en.ini
+++ b/Themes/default/Languages/en.ini
@@ -98,9 +98,10 @@ UserPrefShowLotsaOptions=Options Density
 UserPrefLongFail=Fail Length
 UserPrefFlashyCombo=Flashy Combo
 UserPrefGameplayFooter=Gameplay Footer
+UserPrefFancyUIBG=Fancy UI Background
 
 [OptionExplanations]
-UserPrefAutoSetStyle=Allow the game to list all one player and two player modes at once instead of one style only. This might require a restart of StepMania\n( or alternatively hit F2! )
+UserPrefAutoSetStyle=Allow the game to list all one player and two player modes at once instead of one style only. This might require a restart of StepMania (or press Shift+F2).
 UserPrefNotePosition=Determines where the arrow receptors are placed in gameplay. 
 UserPrefComboOnRolls=Choose if rolls should increment the combo or not.
 UserPrefComboUnderField=Determine if the combo should display under the notes or not.
@@ -108,9 +109,10 @@ UserPrefComboUnderField=Determine if the combo should display under the notes or
 UserPrefGameplayShowScore=Show or Hide the score display in gameplay.
 UserPrefGameplayShowStepsDisplay=Show or Hide the step information display in gameplay.
 UserPrefShowLotsaOptions=Choose how many lines/rows of options to choose from. &oq;Few&cq; keeps the list to a minimum. &oq;Many&cq; adds various show-off mods.
-UserPrefLongFail=Choose between the original sm-ssc fail (Long) or the new, shorter fail (Short).
+UserPrefLongFail=Choose between the original "Long" sm-ssc fail or the "Short" fail adopted later.
 UserPrefFlashyCombo=Determine if combo flashes should be shown or not.
 UserPrefGameplayFooter=If on, displays a footer that blocks visibility of incoming arrows for a certain region ( DDR's score frame ).
+UserPrefFancyUIBG=Toggles the fancy background. "Off" is recommended for older computers. Changes will take effect at the title screen.
 
 ScoringType=Defines which scoring method to use. If Special is selected, you can select a Special Scoring Mode in Theme Options.
 
