move "NEW!" to strings

--- a/Themes/default/Languages/en.ini
+++ b/Themes/default/Languages/en.ini
@@ -62,6 +62,7 @@ HelpText=&BACK; Exit &START; Select &MENULEFT;&MENURIGHT; Move
 HelpText=&BACK; Exit &START; Skip
 
 [ScreenSelectMusic]
+NEW!=NEW!
 Press Start For Options=Press &START; for Options
 Entering Options=Entering Options
 HelpText=&BACK; Exit &START; Select / Join &SELECT; Magic Codes &MENULEFT;&MENURIGHT; Move::&AUXWHITE;+[KEY] Sort To [KEY]
