Update in polish translation. Added "New!" string, and some dirty "hacks" to hide uppercase bug on screen title menu and first options screen.

--- a/Themes/_fallback/Languages/pl.ini
+++ b/Themes/_fallback/Languages/pl.ini
@@ -963,7 +963,7 @@ Mines=Miny
 Mirror Player 1 to 2=Odbicie lustrznie strzałek P1 wględem strzałek P2 (tylko tryb normalny)
 Mirror Player 2 to 1=Odbicie lustrznie strzałek P2 wględem strzałek P1 (tylko tryb normalny)
 MoveRandomToEnd=Losowa na&nbsp;koniec
-More Options=Więcej Opcji
+More Options=WiĘcej Opcji
 MovieColorDepth=Głębia kolorów filmów
 MusicWheelSwitchSpeed=Prędkość Koła
 MusicWheelUsesSections=Sekcje Koła
@@ -1008,7 +1008,7 @@ RandomModifiers=Modyfikatory
 Rate=Tempo
 Record in selection=Nagraj w zaznaczeniu
 RefreshRate=Częstotliwość odświeżania
-Reload Songs=Przeładowanie Piosenek
+Reload Songs=PrzeŁadowanie Piosenek
 Remove=Usuń
 Remove Change=Usuń Zmianę
 Rename=Zmień nazwę
@@ -1048,7 +1048,7 @@ ShowSongOptions=Pokaż Opcje Piosenki
 ShowStats=Pokaż Statystyki
 SmoothLines=Wygładzanie krawędzi
 SoundEffect=Efekty Dźwiękowe
-StepMania Credits=Podziękowania
+StepMania Credits=PodziĘkowania
 Center1Player=Centruj 1&nbsp;Gracza
 Song=Piosenka
 Song Group=Grupa Piosenek
