--- a/Themes/default/Languages/pl.ini
+++ b/Themes/default/Languages/pl.ini
@@ -9,12 +9,12 @@ EventStageCounter=Piosenka %03i
 [ScreenTitleMenu]
 HelpText=&BACK; Wyjście &START; Zatwierdź &MENUUP;&MENUDOWN; Wybierz
 Network OK=Sieć OK
-Offline=Brak połączenia
+Offline=Brak poŁĄczenia
 Connected to %s=Podłączony do %s
 CurrentGametype=Tryb gry: %s
 LifeDifficulty=Zużycie energii: %s
 TimingDifficulty=Ocena trafień: %s
-%i Songs (%i Groups), %i Courses=%i Piosenek (w %i Grupach), %i Maratony(ów)
+%i Songs (%i Groups), %i Courses=%i Piosenek(i) w %i Grupach, %i Maratony(ów)
 
 [ScreenTitleJoin]
 HelpText=Naciśnij &START; by rozpocząć grę
@@ -62,6 +62,7 @@ HelpText=&BACK; Wyjście &START; Zatwierdź &MENULEFT;&MENURIGHT; Wybierz
 HelpText=&BACK; Wyjście &START; Pomiń
 
 [ScreenSelectMusic]
+NEW!=NOWA!
 Press Start For Options=Naciśnij &START; by wejść w Opcje.
 Entering Options=Otwieram Opcje
 HelpText=&BACK; Wyjście &START; Zatwierdź / Dołącz &SELECT; Magiczne kody &MENULEFT;&MENURIGHT; Wybierz::&AUXWHITE;+[LITERA] Sortowanie wg. [LITERY]
