[RageInput] Added "No input devices were loaded." string to languages. [RageInputDevice] Added localized names for InputDeviceState.

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -1168,6 +1168,15 @@ Voltage=Voltage
 MinMidiNote=MinMidiNote
 MaxMidiNote=MaxMidiNote
 
+[RageInput]
+No input devices were loaded.=No input devices were loaded.
+
+[RageInputDevice]
+Connected=Connected
+Unplugged=Unplugged
+NeedsMultitap=Needs a Multitap
+NoInputHandler=No Input Handler
+
 [RageSoundManager]
 Couldn't find a sound driver that works=Couldn't find a sound driver that works
 
