Updated Polish translation.

--- a/Themes/_fallback/Languages/pl.ini
+++ b/Themes/_fallback/Languages/pl.ini
@@ -1167,6 +1167,15 @@ Voltage=Woltaż
 MinMidiNote=MinMidiNote
 MaxMidiNote=MaxMidiNote
 
+[RageInput]
+No input devices were loaded.=Nie załadowano żadnych urządzeń wejściowych.
+
+[RageInputDevice]
+Connected=Podłączony
+Unplugged=Odłączony
+NeedsMultitap=Potrzebuje Multitapa
+NoInputHandler=Brak Handlera Wejściowego.
+
 [RageSoundManager]
 Couldn't find a sound driver that works=Nie udało się znaleźć działającego sterownika dźwięku
 
