some small changes in the mouse test theme

--- a/Themes/MouseTest/Languages/en.ini
+++ b/Themes/MouseTest/Languages/en.ini
@@ -1,6 +1,6 @@
 [Common]
-WindowTitle=sm-ssc Mouse Test
+WindowTitle=StepMania 5 Mouse Test
 
 [MouseTest]
 Title=sm-ssc Mouse Test
-Instructions=Move around with the mouse. You'll see some coordinates in the bottom right, and when you click, a target appears.
+Instructions=Move around with the mouse. You'll see some coordinates in the bottom left, and when you click, a target appears.
