--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -1430,6 +1430,9 @@ HeaderText=Map Controllers
 InvalidButton=That key can not be mapped.
 %s slots=%s slots
 
+[ScreenMapControllers2]
+Add Mapping=Add Mapping
+
 [ScreenNetRoom]
 Enter a description for the room:=Enter a description for the room:
 Enter a password for the room (blank, no password):=Enter a password for the room (blank, no password):
