--- a/Themes/HelloWorld/Languages/en.ini
+++ b/Themes/HelloWorld/Languages/en.ini
@@ -8,7 +8,7 @@ Tutorial=Tutorials
 
 [ScreenGuideMain]
 Header=Guide
-Explanation=The Guide section is meant for beginners who may not know the ins and outs of the StepMania theming system. It is also useful for themers coming from earlier versions of StepMania, as some things have changed in StepMania 5.
+Explanation=The Guide section is meant for beginners who may not know how the StepMania theming system works. It is also useful for themers coming from earlier versions of StepMania, as some things have changed in StepMania 5.
 
 Metrics=Metrics
 MetricsDesc=Metrics and Languages (since they're similar).
@@ -33,7 +33,7 @@ CharactersDesc=Three-dimensional characters dancing in Gameplay. Modeling skills
 
 [ScreenReferenceMain]
 Header=Reference
-Explanation=This section contains reference material. It is meant for themers who already somewhat know what they are looking for.
+Explanation=This section contains reference material. It is meant for themers who already know what they are looking for.
 
 Screens=Screens
 ScreensDesc=A reference of all of StepMania 5's available screens.
@@ -41,3 +41,5 @@ Managers=Managers and Singletons
 ManagersDesc=Various things that end in "Manager" (and sometimes not).
 Classes=Classes
 ClassesDesc=The classes that make up some of your favorite elements.
+LuaRef=Lua Reference
+LuaRefDesc=Visit the StepMania 5 Lua reference online.
