more updates to Hello World, mainly in the readme.

--- a/Themes/HelloWorld/Languages/en.ini
+++ b/Themes/HelloWorld/Languages/en.ini
@@ -10,6 +10,8 @@ Tutorial=Tutorials
 Header=Guide
 Explanation=The Guide section is meant for beginners who may not know how the StepMania theming system works. It is also useful for themers coming from earlier versions of StepMania, as some things have changed in StepMania 5.
 
+Beginning=Beginning
+BeginningDesc=So you've decided to make a theme for StepMania 5.
 Metrics=Metrics
 MetricsDesc=Metrics and Languages (since they're similar).
 Fonts=Fonts
