screen filter related things

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -433,6 +433,7 @@ SaveStats=If enabled, save Stats.xml.
 ScoreDisplay=ScoreDisplay
 Scoreboard=Enables scoreboard
 ScoringType=Defines which scoring method to use.
+ScreenFilter=Screen Filter
 Scroll=Scroll
 Select Group=Toggle Songs in this Group.
 Select Profile=Choose a profile
@@ -1024,6 +1025,7 @@ SaveStats=Save Stats
 ScoreDisplay=Score Display
 Scoreboard=Scoreboard
 ScoringType=Scoring Type
+ScreenFilter=Screen Filter
 Scroll=Scroll
 Secret=Secret
 Server=Server
