why was this never added in the first place? seriously.

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -361,6 +361,7 @@ DisplayColorDepth=Choose the color depth of the window. This option may not take
 DisplayResolution=Choose the output resolution.  A higher resolution will show more detail, but requires a faster video card.
 EasterEggs=Enable or disable some special easter eggs.
 Edit Courses=Edit Courses
+Edit Courses/Mods=Edit Courses/Mods
 Edit Songs/Steps=Edit Songs/Steps
 Practice Songs/Steps=Practice Songs/Steps
 EditorShowBGChangesPlay=Choose whether to display song backgrounds while playing.
@@ -791,6 +792,7 @@ XMode=XMode
 Off=Off
 
 [OptionTitles]
+Edit Courses/Mods=Edit Courses/Mods
 Accel=Acceleration
 Add/Edit Background Change=Add/Edit Background Change
 Air=Air
