fix edit menu help text

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -1369,13 +1369,13 @@ HeaderText=Edit Song/Steps
 HeaderSubText=Make your songs perfect
 Continue with delete?=Continue with delete?
 Enter a description for this edit.=Enter a description for this edit.
-ExplanationAction=In this mode, you can edit existing notes patterns, create note patterns, or synchronize notes with the music.
-ExplanationGroup=In this mode, you can edit existing notes patterns, create note patterns, or synchronize notes with the music.
-ExplanationSong=In this mode, you can edit existing notes patterns, create note patterns, or synchronize notes with the music.
-ExplanationSourceSteps=In this mode, you can edit existing notes patterns, create note patterns, or synchronize notes with the music.
-ExplanationSourceStepsType=In this mode, you can edit existing notes patterns, create note patterns, or synchronize notes with the music.
-ExplanationSteps=In this mode, you can edit existing notes patterns, create note patterns, or synchronize notes with the music.
-ExplanationStepsType=In this mode, you can edit existing notes patterns, create note patterns, or synchronize notes with the music.
+ExplanationAction=Choose the action to perform using the values selected above.
+ExplanationGroup=Choose the group of songs you want to select from.
+ExplanationSong=Choose which song you want to edit.
+ExplanationSteps=Choose the steps you want to edit.\nSelect "New Edit" to create a new edit file.
+ExplanationStepsType=Choose the type of steps that you want to edit.
+ExplanationSourceSteps=Choose the steps you want to fill into a new edit.
+ExplanationSourceStepsType=Choose the type of steps that you want to use fill into a new edit.\nChoose "Blank" to create a new edit with no initial steps.
 Profile name cannot be blank.=Profile name can not be blank.
 The name you chose conflicts with another profile. Please use a different name.=The name you chose conflicts with another profile.  Please use a different name.
 These steps are produced by autogen.  You do not need to delete them.=These steps are produced by autogen.  You do not need to delete them.
