[Default theme] Added Song Timing Display user preference.

--- a/Themes/default/Languages/en.ini
+++ b/Themes/default/Languages/en.ini
@@ -100,6 +100,7 @@ UserPrefLongFail=Fail Length
 UserPrefFlashyCombo=Flashy Combo
 UserPrefGameplayFooter=Gameplay Footer
 UserPrefFancyUIBG=Fancy UI Background
+UserPrefTimingDisplay=Timing Display
 
 [OptionExplanations]
 UserPrefAutoSetStyle=Allow the game to list all one player and two player modes at once instead of one style only. This might require a restart of StepMania (or press Shift+F2).
@@ -114,6 +115,7 @@ UserPrefLongFail=Choose between the original "Long" sm-ssc fail or the "Short" f
 UserPrefFlashyCombo=Determine if combo flashes should be shown or not.
 UserPrefGameplayFooter=If on, displays a footer that blocks visibility of incoming arrows for a certain region ( DDR's score frame ).
 UserPrefFancyUIBG=Toggles the fancy background. "Off" is recommended for older computers. Changes will take effect at the title screen.
+UserPrefTimingDisplay=Toggles the display of timing segments on the song progress meter.
 
 ScoringType=Defines which scoring method to use. If Special is selected, you can select a Special Scoring Mode in Theme Options.
 
